Day 9 HTML Tasks

--- a/html_task1.html
+++ b/html_task1.html
@@ -4,7 +4,8 @@
     </head>
     <body>
         <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </div>
         <div>
              Guvi Geek Network
         </div>
